# usage-bar

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_LICENSES.md  install.sh  uninstall.sh
.github/workflows/: release.yml
packaging/: io.github.usagebar.UsageBar.desktop
scripts/: fetch-codexbar-cli.sh  package-appimage.sh  package-tar.sh
src/: main.cpp  mainwindow.cpp  mainwindow.h  notificationtracker.cpp  notificationtracker.h  providers.cpp  providers.h  settingswindow.cpp  settingswindow.h  singleinstance.cpp  singleinstance.h  usage.cpp  usage.h  usagebackend.cpp  usagebackend.h
tests/: usage_test.cpp
